<?xml version="1.0"?>
<package>
  <name>mobility_base_common</name>
  <version>0.0.1</version>
  <description>
    URDF, meshes, and custom messages describing the Mobility
    Base Robot from Dataspeed Inc.
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_common</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>mobility_base_description</run_depend>
  <run_depend>mobility_base_core_msgs</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
