<?xml version="1.0"?>
<package>
  <name>mobility_base_core_msgs</name>
  <version>0.0.1</version>
  <description>
    Messages required for communication with the Mobility
    Base Robot from Dataspeed Inc.
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_common</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
