<?xml version="1.0"?>
<package>
  <name>mobility_base_description</name>
  <version>0.0.1</version>
  <description>
    Description of Mobility Base Robot from Dataspeed Inc.
    This package contains the URDF and meshes describing the Mobility Base.
  </description>

  <license>BSD</license>
  <author>Dataspeed Inc.</author>
  <maintainer email="khallenbeck@dataspeedinc.com">Dataspeed Inc.</maintainer>
  <url type="website">http://dataspeedinc.com</url>
  <url type="repository">https://bitbucket.org/dataspeedinc/mobility_base_common</url>
  <url type="bugtracker">https://bitbucket.org/dataspeedinc/mobility_base_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
